--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">    
-<script src="/src/js/settings.js" async></script>
+    <meta charset="UTF-8">
+    <script src="/src/js/settings.js" async></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description"
-        content="aridan.net">
+    <meta name="description" content="aridan.net">
     <meta name="keywords"
         content="aridan, actuallyaridan, adnan, bukvic, twitter, discord, lanyard, api, web, developer, front-end, back-end, it, technician, tech, enthusiast">
     <meta name="author" content="actualluaridan">
@@ -41,9 +40,10 @@
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
-                <li><button class="noUI" onClick="toggleSettings()"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
-                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
-                            title="GitHub"></i></a></li>
+                <li><button class="noUI" onClick="toggleSettings()"><i class="fa-solid fa-gear"
+                            title="Settings"></i></a></li>
+                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github" title="GitHub"></i></a>
+                </li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
                             title="Twitter"></i></a></li>
             </ul>
@@ -56,7 +56,8 @@
                 <li class="active"><a href="/">aridan.net</a></li>
             </ul>
             <ul>
-                  <li><button title="Menu" class="noUI" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button></li>
+                <li><button title="Menu" class="noUI" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
+                </li>
             </ul>
         </div>
         <menu class="mobileMenu" id="mobileMenuID">
@@ -67,9 +68,10 @@
                 <li><a href="/contact/">Contact</a></li>
             </ul>
             <ul>
-                <li><button class="noUI" onClick="toggleSettings()"><i class="fa-solid fa-gear" title="Settings"></i></a></li>
-                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github"
-                            title="GitHub"></i></a></li>
+                <li><button class="noUI" onClick="toggleSettings()"><i class="fa-solid fa-gear"
+                            title="Settings"></i></a></li>
+                <li><a href="https://github.com/actuallyaridan"><i class="fa-brands fa-github" title="GitHub"></i></a>
+                </li>
                 <li><a href="https://twitter.com/actuallyaridan"><i class="fa-brands fa-twitter"
                             title="Twitter"></i></a></li>
         </menu>
@@ -78,17 +80,23 @@
 
     <main class="container">
         <div id="info" class="withBanner">
-            <img src="/assets/uploads/images/image.webp" alt="A selfie where I'm in a bus in a grey t-shit." class="icon">
+            <img src="/assets/uploads/images/image.webp" alt="A selfie where I'm in a bus in a grey t-shit."
+                class="icon">
             <div>
                 <h1 class="name">Adnan Bukvic</h1>
                 <p class="description white">a swedish <span id="techEnthu">tech
                         enthusiast</span><span id="frontEndWebDev">front end web developer</span><span
                         id="backEndWebDev">back-end web developer</span><span id="itTech">IT-technician</span></p>
-                <p id="statusWrapperConnecting" class="dcloading statusWrapper"><i class="fa-solid fa-hourglass-half"></i>Connecting</p>
-                <p id="statusWrapperOnline" class="online hide statusWrapper"><i class="fa-solid fa-signal"></i>Online</p>
-                <p id="statusWrapperOffline" class="offline hide statusWrapper"><i class="fa-solid fa-umbrella-beach"></i>Not using a computer</p>
-                <p id="statusWrapperDnd" class="dnd hide statusWrapper"><i class="fa-solid fa-circle-minus"></i></i>Do not disturb</p>
-                <p id="statusWrapperIdle" class="idle hide statusWrapper"><i class="fa-solid fa-moon"></i>Doing nothing</p>
+                <p id="statusWrapperConnecting" class="dcloading statusWrapper"><i
+                        class="fa-solid fa-hourglass-half"></i>Connecting</p>
+                <p id="statusWrapperOnline" class="online hide statusWrapper"><i class="fa-solid fa-signal"></i>Online
+                </p>
+                <p id="statusWrapperOffline" class="offline hide statusWrapper"><i
+                        class="fa-solid fa-umbrella-beach"></i>Not using a computer</p>
+                <p id="statusWrapperDnd" class="dnd hide statusWrapper"><i class="fa-solid fa-circle-minus"></i></i>Do
+                    not disturb</p>
+                <p id="statusWrapperIdle" class="idle hide statusWrapper"><i class="fa-solid fa-moon"></i>Doing nothing
+                </p>
             </div>
         </div>
 
@@ -117,6 +125,12 @@
                                     <i class="fa-solid fa-music">
                                         <h3 id="amActivityName">Apple Music</h3>
                                     </i>
+                                    <div class="lds-ring smallLoader">
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                    </div>
                                 </span>
                                 <div id="amDiscordActivityImages">
                                     <img id="amActivityLogoLarge" draggable="false" width="96" height="96" alt=""
@@ -141,6 +155,12 @@
                                 <span class="titleActivity"> <i class="fa-regular fa-window-maximize">
                                         <h3 id="activityName">Loading</h3>
                                     </i>
+                                    <div class="lds-ring smallLoader">
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                    </div>
                                 </span>
                                 <div id="discordActivityImages">
                                     <img id="activityLogoLarge" draggable="false" width="96" height="96" alt=""
@@ -185,14 +205,19 @@
 
         <div class="section">
             <div>
-                <p class="section-content">I have a computer that runs both Windows and macOS - it's a hackinntosh. It runs the latest version of macOS great, with graphic acceleration, WiFi and Bluetooth. It works great, however, due to my graphics card being incompatible with macOS, DRM content, like Netflix, doesn't play in Safari, but does work properly in other browsers. <br>Here are the specs of it if you'd like to build something similar:</p>
+                <p class="section-content">I have a computer that runs both Windows and macOS - it's a hackinntosh. It
+                    runs the latest version of macOS great, with graphic acceleration, WiFi and Bluetooth. It works
+                    great, however, due to my graphics card being incompatible with macOS, DRM content, like Netflix,
+                    doesn't play in Safari, but does work properly in other browsers. <br>Here are the specs of it if
+                    you'd like to build something similar:</p>
                 <ul class="specs">
                     <li><i class="fa-solid fa-microchip"></i>AMD Ryzen 5 3600</li>
                     <li><i class="fa-solid fa-gamepad"></i>Radeon RX 6700 XT</li>
                     <li><i class="fa-solid fa-memory"></i>16GB 3200MHz DDR4 RAM in dual channel</li>
                     <li><i class="fa-solid fa-hard-drive"></i>about 2TB of SSD storage</li>
                     <li><i class="fa-solid fa-wifi"></i>Fenvi T919 WiFi/Bluetooth</li>
-                    <li><i class="fa-brands fa-windows"></i><i class="fa-brands fa-apple"></i>Windows 11 and macOS Sequoia</li>
+                    <li><i class="fa-brands fa-windows"></i><i class="fa-brands fa-apple"></i>Windows 11 and macOS
+                        Sequoia</li>
                 </ul>
             </div>
 
@@ -203,18 +228,24 @@
 
         <div class="section">
             <div>
-                <p class="section-content">I enjoy collecting, repairing, and modifying vintage Apple products, like iPods. I open them, repair them if needed and then modify them with larger batteries, replace the internal spinning hard drive with an SD card and also flash custom firmware on them! It's a really fun hobby and being able to tinker with them is really calming.</p>
+                <p class="section-content">I enjoy collecting, repairing, and modifying vintage Apple products, like
+                    iPods. I open them, repair them if needed and then modify them with larger batteries, replace the
+                    internal spinning hard drive with an SD card and also flash custom firmware on them! It's a really
+                    fun hobby and being able to tinker with them is really calming.</p>
                 <p class="section-content">I currently have a...</p>
                 <ul class="specs">
-                    <li><i class="fa-solid fa-mobile-screen-button"></i>a 5.5th Generation iPod Video with a 5000mAh battery and 128GB SD card storage, along with a transparent click wheel and top case</li>
-                    <li><i class="fa-solid fa-mobile-screen-button"></i>a 2nd Generation iPod Mini with a new battery and 64GB of Compact Flash storage</li>
+                    <li><i class="fa-solid fa-mobile-screen-button"></i>a 5.5th Generation iPod Video with a 5000mAh
+                        battery and 128GB SD card storage, along with a transparent click wheel and top case</li>
+                    <li><i class="fa-solid fa-mobile-screen-button"></i>a 2nd Generation iPod Mini with a new battery
+                        and 64GB of Compact Flash storage</li>
                     <li><i class="fa-solid fa-mobile-screen-button"></i>a 1st Generation iPod Touch</li>
                     <li><i class="fa-solid fa-mobile-screen-button"></i>a 3rd Generation iPod Touch</li>
                 </ul>
             </div>
 
             <div class="photo-container">
-                <img class="photo" alt="A third generation iPod Classic playing music." src="/assets/uploads/images/ipod.webp">
+                <img class="photo" alt="A third generation iPod Classic playing music."
+                    src="/assets/uploads/images/ipod.webp">
             </div>
         </div>
     </main>
@@ -238,13 +269,16 @@
                         <h3><i class="fa-solid fa-paint-roller"></i>Theme</h3>
                         <div class="themeOptions options">
                             <input type="radio" id="auto" name="theme-color" value="auto" class="theme-option" checked>
-                            <label for="auto" class="auto button theme-label"><i class="fa-solid fa-laptop"></i>Follow system</label>
+                            <label for="auto" class="auto button theme-label"><i class="fa-solid fa-laptop"></i>Follow
+                                system</label>
 
                             <input type="radio" id="light" name="theme-color" value="light" class="theme-option">
-                            <label for="light" class="light button theme-label"><i class="fa-solid fa-sun"></i>Light</label>
+                            <label for="light" class="light button theme-label"><i
+                                    class="fa-solid fa-sun"></i>Light</label>
 
                             <input type="radio" id="dark" name="theme-color" value="dark" class="theme-option">
-                            <label for="dark" class="dark button theme-label"><i class="fa-solid fa-moon"></i>Dark</label>
+                            <label for="dark" class="dark button theme-label"><i
+                                    class="fa-solid fa-moon"></i>Dark</label>
                         </div>
                     </div>
                     <div>
@@ -274,45 +308,51 @@
                         <div>
                             <div class="checkbox-wrapper-51">
                                 <label for="autoUpdateActivity" class="title">Automatically update activities</label>
-                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" checked/>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" checked />
                                 <label for="autoUpdateActivity" class="toggle">
                                     <span>
                                         <svg width="10px" height="10px" viewBox="0 0 10 10">
-                                            <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
+                                            <path
+                                                d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z">
+                                            </path>
                                         </svg>
                                     </span>
                                 </label>
                             </div>
-                        </div>                                              
+                        </div>
                     </div>
                     <div>
                         <h3><i class="fa-solid fa-universal-access"></i>Accessibility</h3>
                         <div>
                             <div class="checkbox-wrapper-51">
                                 <label for="autoUpdateActivity" class="title">Reduce motion</label>
-                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" />
                                 <label for="autoUpdateActivity" class="toggle">
                                     <span>
                                         <svg width="10px" height="10px" viewBox="0 0 10 10">
-                                            <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
+                                            <path
+                                                d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z">
+                                            </path>
                                         </svg>
                                     </span>
                                 </label>
                             </div>
-                        </div>  
+                        </div>
                         <div>
                             <div class="checkbox-wrapper-51">
                                 <label for="autoUpdateActivity" class="title">Reduce transparency</label>
-                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/>
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity" />
                                 <label for="autoUpdateActivity" class="toggle">
                                     <span>
                                         <svg width="10px" height="10px" viewBox="0 0 10 10">
-                                            <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
+                                            <path
+                                                d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z">
+                                            </path>
                                         </svg>
                                     </span>
                                 </label>
                             </div>
-                        </div>  
+                        </div>
                     </div>
                 </div>
                 <p class="modalDescription">version 2.6.1</p>
